--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"prop-types": "^15.7.2",
 		"react": "^16.14.0",
 		"react-dom": "^16.14.0",
+		"react-router-dom": "^5.2.0",
 		"react-scripts": "2.1.1"
 	},
 	"scripts": {
